# YT-LLM-Summarizer

./: .gitignore  README.md  main.py  pyproject.toml
src/: converter.py  downloader.py  summarizer.py
summaries/: Projetos REALMENTE úteis para iniciantes em Python.md  Risk of Rains Lore is a Tragic Masterpiece.md
